Update SecurityCheckServiceImpl.java